--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -49,24 +49,26 @@
 
 .banner__focused h1,
 .banner__unfocused h1 {
+  text-align: center;
   color: #fff;
   margin: 0;
-  font-size: 52px;
+  font-size: calc(28px + 4vw);
   animation: fadeText 0.5s forwards;
 }
 
 .banner__focused h2,
 .banner__unfocused h2 {
   font-family: 'Montserrat', sans-serif;
+  font-size: calc(8px + 1vw);
   text-align: center;
   margin: 0;
   color: #fff;
   white-space: nowrap;
-  font-size: 18px;
   animation: moveText 0.5s forwards;
 }
 
 .home .container {
+  border-top: 2px rgba(255, 255, 255, 25%) solid;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,8 +80,6 @@
 }
 
 .home .container .title {
-  margin-top: 64px;
-  margin-bottom: 20px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -99,12 +99,23 @@
 }
 
 .home .container .title h1 {
+  white-space: nowrap;
   margin: 0;
   padding: 0 10px;
   z-index: 0;
   background-color: var(--blurple-hard);
   color: white;
-  font-size: 25px;
+  font-size: 40px;
+  margin-bottom: 12px;
+}
+
+.home .container .work-info {
+  max-width: var(--section-max-width);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 64px;
 }
 
 @keyframes fadeText {
@@ -134,9 +145,14 @@
   }
 
   100% {
-    padding: 0 20px;
     padding-top: 4px;
-    font-size: 17px;
-    text-shadow: 0px 2px #000;
+    font-size: calc(10px + 1vw);
+    text-shadow: 0px 2px rgb(59, 59, 59);
   }
 }
+
+/* @media only screen and (max-width: 800px) {
+  .home .container .work-info {
+    max-width: 30rem;
+  }
+} */
